compiler/tests/snapshots/parser__rune_lit-2.snap
---
source: tests/parser.rs
expression: err.to_string()
---
 --> 1:1
  |
1 | '\k'
  | ^---
  |
  = expected RuneLit
