compiler/tests/snapshots/parser__rune_lit-3.snap
---
source: tests/parser.rs
expression: err.to_string()
---
 --> 1:1
  |
1 | '\xa'
  | ^---
  |
  = expected RuneLit
