compiler/tests/snapshots/parser__rune_lit-4.snap
---
source: tests/parser.rs
expression: err.to_string()
---
 --> 1:1
  |
1 | '\0'
  | ^---
  |
  = expected RuneLit
