compiler/tests/snapshots/parser__rune_lit.snap
---
source: tests/parser.rs
expression: err.to_string()
---
 --> 1:1
  |
1 | 'aa'
  | ^---
  |
  = expected RuneLit
